# humm-earth-core-happ

./: .baseline-hashes.txt  .gitignore  ADDITIONAL_CODING_STANDARDS_AND_GUIDANCE.md  AGENTS.md  ANTI_SLOP.md  CLAUDE.md  CODING_STANDARDS.md  CONTEXT-INJECTION.md  Cargo.toml  POSTCOMPACTION.md  README.md  flake.nix  humm-earth-core-happ.sublime-project  package-lock.json  package.json
.claude/: settings.json
.claude/agents/: README.md  code-reviewer.md  librarian.md  security-reviewer.md  silent-failure-hunter.md  technical-researcher.md  typescript-reviewer.md
.codex/: README.md  config.toml  hooks.json
.codex/agents/: README.md  code-reviewer.toml  doc-updater.toml  librarian.toml  rust-build-resolver.toml  rust-reviewer.toml  security-reviewer.toml  silent-failure-hunter.toml  technical-researcher.toml  typescript-reviewer.toml
.doneTasks/: handoff-doc-refresh-dm-keybinding.md  humm-earth-core-dry-refactor.md
.extraResearch/: SIGNAL_MULTI_DEVICE_RESEARCH.md
.github/workflows/: test.yaml
.newTasks/: MISC_SEC_FOLLOWUP.md  PASS6_OPTIMIZATION_HANDOFF.md  PASS_7_HANDOFF_DOCS.md  github-release-automation-happ-registry.md  handoff-doc-refresh-dm-keybinding.md  pass-7-integrity-candidates.md  rc-happ-futureproofing.md  recv-remote-signal-externio-fix.md
.omp/: README.md  config.yml
.omp/rules/: comment-no-narration.md  dry-duplicate-block.md  file-too-long-warn.md  file-too-long.md  integrity-zome-guard.md  repo-standards.md  rs-fn-too-long-warn.md  rs-fn-too-long.md  rs-no-nist-curve.md  rs-no-silent-swallow.md  rs-no-unwrap.md  ts-fn-too-long-warn.md  ts-fn-too-long.md  ts-no-any.md  ts-no-bare-catch.md  ts-no-foreach.md  ts-no-namespace-import.md  ts-no-wildcard-reexport.md  ts-prefer-async-await.md  ts-test-no-cwd-path.md
.reports/: codemap-diff.txt
crates/sweettest/: Cargo.toml  README.md
crates/sweettest/fixtures/: expected-dna-hash.txt  pass-6-service-meter.dna
crates/sweettest/tests/: batch_reads.rs  coordinator_cleanup.rs  coordinator_query_tolerance.rs  group_uniqueness.rs  hive_membership_index.rs  idempotent_writes.rs  inbox_and_delete.rs  lineage_cross_generation.rs  liveness_and_reindex.rs  migration_rescue.rs  owner_and_acl.rs  pinned_hosts.rs  recipient_witnesses.rs  role_key_closure.rs  service_records.rs  signal_hints.rs
crates/sweettest/tests/support/: mod.rs
dnas/humm_earth_core/zomes/coordinator/content/: Cargo.toml
dnas/humm_earth_core/zomes/coordinator/content/src/: encrypted_content.rs  invite.rs  lib.rs
dnas/humm_earth_core/zomes/coordinator/content/src/encrypted_content/: crud.rs  get_helpers.rs  lineage.rs  migration.rs  mod.rs  paging.rs  queries.rs  remediation.rs  service_records.rs  signals.rs
dnas/humm_earth_core/zomes/coordinator/content/src/encrypted_content/migration/: markers.rs  mod.rs  payload.rs  readers.rs  tests.rs  writers.rs
dnas/humm_earth_core/zomes/coordinator/content/src/encrypted_content/service_records/: tests.rs
dnas/humm_earth_core/zomes/coordinator/content/src/encrypted_content/signals/: blob_pin.rs  content.rs  dm.rs  mod.rs  outbound.rs  tests.rs
dnas/humm_earth_core/zomes/coordinator/content/src/group/: crud.rs  mod.rs  queries.rs
dnas/humm_earth_core/zomes/coordinator/content/src/hive/: crud.rs  mod.rs  owner.rs  queries.rs
dnas/humm_earth_core/zomes/coordinator/content/src/inbox/: crud.rs  mod.rs  queries.rs
dnas/humm_earth_core/zomes/coordinator/content/src/linking/: acl_links.rs  dynamic_links.rs  hive_link.rs  humm_content_id_link.rs  mod.rs
dnas/humm_earth_core/zomes/integrity/content/: Cargo.toml
dnas/humm_earth_core/zomes/integrity/content/src/: encrypted_content.rs  globals.rs  group.rs  hive.rs  inbox.rs  invite.rs  lib.rs
dnas/humm_earth_core/zomes/integrity/content/src/encrypted_content/: entry_validation.rs  mod.rs  types.rs
dnas/humm_earth_core/zomes/integrity/content/src/encrypted_content/links/: acl.rs  common.rs  content_id.rs  dynamic.rs  hive.rs  lineage.rs  mod.rs  original_pointer.rs  updates.rs
dnas/humm_earth_core/zomes/integrity/content/src/encrypted_content/tests/: continuity.rs  delete.rs  direct_message.rs  header.rs  lineage.rs  links.rs  mod.rs  support.rs  witnesses.rs
dnas/humm_earth_core/zomes/integrity/content/src/group/: authority.rs  links.rs  membership.rs  mod.rs  tests.rs  types.rs
dnas/humm_earth_core/zomes/integrity/content/src/hive/: authority.rs  links.rs  membership.rs  mod.rs  owner.rs  tests.rs  types.rs
dnas/humm_earth_core/zomes/integrity/content/src/validation_dispatch/: activity.rs  entry.rs  links.rs  mod.rs
docs/: DNA_MIGRATION_GUIDE.md  HANDOFF_UPDATED_INFO.md  HUMM_TAURI_ACLSPEC_INTEGRATION.md  HUMM_TAURI_ACLSPEC_MUTATION_ON_UPDATE.md  HUMM_TAURI_BATCH_READS_INTEGRATION.md  HUMM_TAURI_CONTENT_TYPE_FILTERING_AND_WITNESS_RULES.md  HUMM_TAURI_COORDINATOR_INTEGRATION.md  HUMM_TAURI_CORE_HAPP_BDD_SANITY_CHECKS.md  HUMM_TAURI_DM_MESSAGING_INTEGRATION.md  HUMM_TAURI_FEATURE_ENABLEMENT.md  HUMM_TAURI_IDEMPOTENT_WRITES_INTEGRATION.md  HUMM_TAURI_OWNER_ROLE_AND_ACL_INTEGRATION.md  HUMM_TAURI_PASS_7_INTEGRATION.md  HUMM_TAURI_PASS_ROADMAP.md  HUMM_TAURI_PINNED_HOSTS_INTEGRATION.md  HUMM_TAURI_RECV_REMOTE_SIGNAL_FIX.md  HUMM_TAURI_SELF_NOTES_INTEGRATION.md  HUMM_TAURI_SELF_NOTES_OBSERVABILITY.md  HUMM_TAURI_SERVICE_METER_INTEGRATION.md  HUMM_TAURI_SHARED_SECRETS_PUBLIC_ACL_WIRE_SHAPE.md  HUMM_TAURI_WAVE4_INTEGRATION.md  PASS_1_DEPLOY_HANDOFF.md  PASS_1_MARKER_V2_HANDOFF.md  PASS_1_MARKER_V2_SANITY_TESTS.md  PASS_2_DEPLOY_HANDOFF.md  PASS_3_DEPLOY_HANDOFF.md  PASS_4_DEPLOY_HANDOFF.md  PASS_4_MIGRATION_RESCUE_HANDOFF.md  PASS_5_DEPLOY_HANDOFF.md  PASS_6_DEPLOY_HANDOFF.md  PASS_6_DRY_REFACTOR_HANDOFF.md  PASS_7_SCRATCH.md
docs/CODEMAPS/: architecture.md  backend.md  data.md  dependencies.md
e2e/: README.md  acl.ts  conductor.ts  ops.ts  package.json  run.ts
e2e/scenarios/: authority.ts  (+3 more)
hooks/: session-context.mjs
scripts/: acl-bucket.ts  bash_helpers.sh  build-zomes.sh  migrate-dna.ts  strip-wasms.sh  wsl-check.sh  wsl-pull.sh  wsl-push.sh
tests/: package.json  tsconfig.json
ui/: package.json
workdir/: happ.yaml
(+60 files in other folders)
