[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.5.0-dev.17"
hdk = "=0.4.0-dev.19"
holochain_integrity_types = "=0.4.0-dev.15"
serde = "=1.0.203"
time_indexing = { git = "https://github.com/ddd-mtl/time-indexing", branch = "hdk-4.0-dev.20" }
zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-4.0-dev.20" }

[workspace.dependencies.content]
path = "dnas/humm_earth_core/zomes/coordinator/content"

[workspace.dependencies.content_integrity]
path = "dnas/humm_earth_core/zomes/integrity/content"
