[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
codegen-units = 1

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]

# Note: tauri-plugin-holochain removed - p2p-shipyard repos are now private
# For Tauri/Android builds, contact darksoil-studio for access
# tauri-plugin-holochain = { git = "https://github.com/darksoil-studio/p2p-shipyard", branch = "main-0.6" }

# Holochain 0.6.x dependencies (for zome/hApp builds)
hdi = "=0.7.0"
hdk = "=0.6.0"
holochain_integrity_types = "=0.6.0"
holochain_serialized_bytes = "=0.0.56"
serde = "1.0"
# time_indexing = { git = "https://github.com/ddd-mtl/time-indexing", branch = "hdk-4.0-dev.20" }
# zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-4.0" }

[workspace.dependencies.content]
path = "dnas/humm_earth_core/zomes/coordinator/content"

[workspace.dependencies.content_integrity]
path = "dnas/humm_earth_core/zomes/integrity/content"
