# Standalone Sweettest harness — its OWN workspace, deliberately NOT a member
# of the zome workspace. Kept isolated because the holochain conductor crate
# drags in a large dependency tree (tokio runtime, networking, wasmer host)
# that has no business in the lean wasm zome workspace; sharing a workspace
# would also fight over feature unification. Both workspaces now pin
# holochain_serialized_bytes =0.0.57 (pass-5 0.6.1 alignment).
#
# Boots an in-process holochain 0.6.1 conductor (matching the flake's hc 0.6.1,
# rev 3bdeacc), loads the pre-built
# ../../dnas/humm_earth_core/workdir/humm_earth_core.dna (which carries the
# pass-5 owner-role + ACL coordinator), and exercises the externs on a real
# conductor — the behavior proof in-repo tryorama can't give on hc 0.6.x (the
# quic->webrtc CLI treadmill).
[package]
name = "humm-sweettest"
version = "0.0.0"
edition = "2021"
publish = false

# Own workspace root → isolated from the zome workspace above.
[workspace]

[dev-dependencies]
holochain = { git = "https://github.com/holochain/holochain", rev = "3bdeaccd1c54fa351e76f7347601dfbc061d5bd4", default-features = false, features = [
  "sweettest",
  "wasmer_sys",
  "transport-iroh",
] }
holo_hash = { git = "https://github.com/holochain/holochain", rev = "3bdeaccd1c54fa351e76f7347601dfbc061d5bd4", features = ["full"] }
holochain_types = { git = "https://github.com/holochain/holochain", rev = "3bdeaccd1c54fa351e76f7347601dfbc061d5bd4" }
holochain_zome_types = { git = "https://github.com/holochain/holochain", rev = "3bdeaccd1c54fa351e76f7347601dfbc061d5bd4" }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
holochain_trace = { git = "https://github.com/holochain/holochain", rev = "3bdeaccd1c54fa351e76f7347601dfbc061d5bd4" }

# Test binaries statically link the whole conductor stack (holochain +
# wasmer + iroh); full debuginfo made each of the 12 links slow and
# memory-hungry enough to OOM the linker. Line tables keep usable
# backtraces at a fraction of the object size.
[profile.dev]
debug = "line-tables-only"
