[package]
name = "content"
version = "0.0.1"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]
name = "content"

[dependencies]
hdk = { workspace = true }
holochain_serialized_bytes = { workspace = true }

serde = { workspace = true }

# time_indexing = { workspace = true }
# zome_utils.workspace = true
content_integrity = { workspace = true } 
